updater main files

--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-<canvas aria-label="Swirl made up of red, orange, blue, and purple tiles whose size respond to the pattern"></canvas>
+<!--
+  *****~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*****
+
+    Created by Jonas Kjeldmand Jensen
+    February 2026
+
+    "Playful Determinism"
+
+    A generative canvas animation that creates a mesmerizing swirl pattern
+    made of animated tiles. This is the main entry point that loads the
+    necessary stylesheets and JavaScript to render the animation.
+
+    The page is designed to be minimal and focused, with the canvas serving
+    as the primary visual element that fills the entire viewport.
+
+  *****~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*****
+-->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Playful Determinism</title>
+	<link rel="stylesheet" href="src/styles/style.css">
+</head>
+<body>
+	<canvas aria-label="Swirl made up of red, orange, blue, and purple tiles whose size respond to the pattern"></canvas>
+	<script src="src/javascript/sketch.js"></script>
+</body>
+</html>
